2024-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.12

2024-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add link to introductory 'Holidays in QuantLib' piece

2024-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/ql/time/calendars/brazil.?pp: Updated from QuantLib 1.35 (rc)

2024-07-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/chile.?pp: Updated from QuantLib 1.35 (rc)
	* src/ql/time/calendars/india.?pp: Idem
	* src/ql/time/calendars/unitedstates.cpp: Idem

2024-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-27  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.0.11

2024-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.34 (rc)
	* src/ql/time/calendars/india.cpp: Idem
	* src/ql/time/calendars/singapore.{cpp,hpp}: Idem
	* src/ql/time/calendars/southafrica.cpp: Idem
	* src/ql/time/calendars/thailand.cpp: Idem
	* src/ql/time/calendars/unitedstates.cpp: Idem
	* src/ql/patterns/observable.{cpp,hpp}: Idem
	* src/ql/time/date.hpp: Idem

2024-02-19  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.10

2024-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/mexico.{cpp,hpp}: Updated from QuantLib 1.33

2024-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.33 (rc)