@@ -32,22 +32,16 @@
 #include <boost/optional.hpp>
 #endif
 
-namespace QuantLib {
-
-    namespace ext {
+namespace QuantLib::ext {
 
         #if defined(QL_USE_STD_OPTIONAL)
         using std::optional;                    // NOLINT(misc-unused-using-decls)
-        // here we can assume C++17
         inline constexpr const std::nullopt_t& nullopt = std::nullopt;
         #else
         using boost::optional;                  // NOLINT(misc-unused-using-decls)
-        // here we can't
-        extern const boost::none_t& nullopt;
+        inline constexpr const boost::none_t& nullopt = boost::none;
         #endif
 
     }
-
-}
 
 #endif
