@@ -109,6 +109,12 @@ namespace QuantLib {
         */
         bool isWeekend(Weekday w) const;
         /*! Returns <tt>true</tt> iff in the given market, the date is on
+            or before the first business day for that month.
+        */
+        bool isStartOfMonth(const Date& d) const;
+        //! first business day of the month to which the given date belongs
+        Date startOfMonth(const Date& d) const;
+        /*! Returns <tt>true</tt> iff in the given market, the date is on
             or after the last business day for that month.
         */
         bool isEndOfMonth(const Date& d) const;
@@ -240,8 +246,16 @@ namespace QuantLib {
         return impl_->isBusinessDay(_d);
     }
 
+    inline bool Calendar::isStartOfMonth(const Date& d) const {
+        return d <= startOfMonth(d);
+    }
+
+    inline Date Calendar::startOfMonth(const Date& d) const {
+        return adjust(Date::startOfMonth(d), Following);
+    }
+
     inline bool Calendar::isEndOfMonth(const Date& d) const {
-        return (d.month() != adjust(d+1).month());
+        return d >= endOfMonth(d);
     }
 
     inline Date Calendar::endOfMonth(const Date& d) const {
